# app_swift

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTORS.md  Makefile.in  README  README.md  app_swift.c  configure  variables.tf
terraform/: README.md  main.tf  variables.tf
terraform/asterisk13/: README.md  main.tf
terraform/asterisk15/: main.tf
terraform/asterisk16/: README.md  main.tf
